--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -3,7 +3,7 @@ upstream web {
 }
 server {
     listen 80;
-    server_name localhost 127.0.0.1 178.154.209.138;
+    server_name localhost 127.0.0.1 130.193.59.249
     server_tokens off;
 
     location / {
