--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -45,33 +45,17 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/recipes_service:v1
 
   deploy:
-    name: Deploy the app
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
-    - name: Check out the repo
-      uses: actions/checkout@v2
-    - name: Copy file via ssh password
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.PASSPHRASE }}
-        port: 22
-        source: 'docker-compose.yaml, config/nginx/nginx.conf'
-        target: '/home/${{ secrets.USER }}/code'
-
-    - name: Execute remote ssh commands to deploy
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.PASSPHRASE }}
-        script: |
-          cd app
-          sudo docker stop $(sudo docker ps -a -q)
-          sudo docker image prune -f
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/recipes_service:v1
-          sudo docker-compose up -d --force-recreate
+      - name: executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          script: |
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/recipes_service:v1
+            sudo docker stop $(sudo docker ps -a -q)
+            sudo docker-compose.yaml
