--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -58,4 +58,4 @@ jobs:
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/recipes_service:v1
             sudo docker stop $(sudo docker ps -a -q)
-            sudo docker-compose.yaml up -d
+            sudo docker-compose up -d
