--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ volumes:
 
 services:
   db:
+    container_name: postgres
     image: postgres:12.4
     volumes:
       - postgres_data:/var/lib/postgresql/data/
@@ -14,6 +15,7 @@ services:
      - ./.env
 
   web:
+    container_name: foodgram
     image: 'russopelegro/recipes_service:v1'
     restart: always
     command: gunicorn recipes_service.wsgi:application --bind 0.0.0.0:8000 --access-logfile -
@@ -26,6 +28,7 @@ services:
       - db
 
   nginx:
+    container_name: nginx
     restart: always
     image: nginx:1.19
     volumes:
