--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
     image: postgres:12.4
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    environment:
+        POSTGRES_PASSWORD: postgres
     env_file:
      - ./.env
 
